# OOP_MAI_8fak_course

./: README.md
laba_1/: CMakeLists.txt  README.md  gcd.cpp  gcd.h  laba_1.cpp  test.cpp
laba_2/: README.md  hex.cpp  hex.h  main.cpp  test.cpp
laba_3/: Makefile
laba_4/: README.md
laba_5/: README.md  main.cpp
laba_5/include/: allocate.h  vector.h
laba_6/: CMakeLists.txt  Druid.cpp  Orc.cpp  README.md  Slaver.cpp  factory.cpp  main.cpp  npc.cpp  observer.cpp  test.cpp  visitor.cpp
laba_6/include/: Druid.h  Orc.h  Slaver.h  coord.h  factory.h  npc.h  observer.h  visitor.h
